--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ a:focus { outline: thin dotted; }
 @font-face{ font-family:"AvenirNextLTW01-MediumC 721311"; src:url("../fonts/10236419-1766-4da0-9a4c-83b4fffea025.eot?#iefix"); src:url("../fonts/10236419-1766-4da0-9a4c-83b4fffea025.eot?#iefix") format("eot"),url("../fonts/4a75c3b0-f2ef-402c-b54b-ed543933e9c5.woff") format("woff"),url("../fonts/bb18d7e3-286e-4825-bf91-7fbeaf607d05.ttf") format("truetype"),url("../fonts/9c91e8bb-b452-4e4f-b00c-dad5dadb10c6.svg#9c91e8bb-b452-4e4f-b00c-dad5dadb10c6") format("svg"); }
 /* Typography ===================================================================================== */
 h1 { font-size: 2em; margin: 0.67em 0; }
-	h1, h2, h3, h4, h5, h6 { font-weight: normal; color:#F74902; position: relative; margin-top:20px; }
+	h1, h2, h3, h4, h5, h6 { font-weight: normal; color:#800d1e; position: relative; margin-top:20px; }
 	h3, h4, h5, h6 { font-weight: normal; }
 	h1 { color: #000; font-family:'Avenir Next LT W01 Bold', Arial, sans-serif; font-size: 2.5em; line-height: 1.75em; margin-bottom: 14px; }
 	h2 { color: #000; font-size: 24px; margin-bottom: 12px; }
@@ -69,7 +69,7 @@ fieldset { border: 0; margin: 0; padding: 0; }
 textarea { resize: vertical; }
 ul, li { list-style: none; margin: 0; }
 p { margin: 0 0 10px 0; }
-p, ol, ul { font-size: 14px; line-height: 20px; }
+p, ol, ul { font-size: 1em; line-height: 1.25em; }
 abbr { border-bottom: 1px dotted; }
 p, dl, hr, h1, h2, h3, h4, h5, h6, ol, ul, pre, table, address, fieldset { margin-bottom: 13px; }
 	p.indent { margin: -10px 0 5px 0; }
@@ -80,13 +80,12 @@ body { background: #fff;  color: #000; }
 	/* Header ========================================================================= */
 	header {  height: 60px; width: 100%; position: relative; border-bottom: 10px solid #800D1E; background: #1A1712; }
 		#hdr { position: relative; margin: 0 auto; overflow: hidden; }
-/* 		#hdr a {  width: 212px; height: 39px; display: inline-block; } */
 		#hdr h1 { width: 212px; height: 40px; padding: 7px; margin: 0; height: 40px; }
 		#hdr h1 a { display:block; height: 70px; width:365px; position: absolute; margin: 6px 0 0; background: url('../img/common/CapellaUniversity.png') no-repeat 0 0; text-indent: -9999em; }
-		#hdr #social { position: absolute; right: 0; top: 11px; width: 32%; margin: 0; padding: 7px 7px 7px 0; z-index: 1; }
-			#hdr #social li { display: inline-block; vertical-align: top; margin-left: 10px; }
-				#hdr #social li a { display: inline; width: 20px; height: 20px; font-size: 1.25em; color: #ccc; }
-					#hdr #social li a:hover { color: #551a8b; }
+		#hdr .social { position: absolute; right: 0; top: 11px; width: 32%; margin: 0; padding: 7px 7px 7px 0; z-index: 1; }
+			#hdr .social li { display: inline-block; vertical-align: top; margin-left: 10px; }
+				#hdr .social li a { display: inline; width: 20px; height: 20px; font-size: 1.25em; color: #ccc; }
+					#hdr .social li a:hover { color: #551a8b; }
 
 	/* Content ========================================================================= */
 	#main { display: block; }
@@ -96,7 +95,7 @@ body { background: #fff;  color: #000; }
 				#content > section article { border-bottom: 1px #dcdcdc solid; margin-bottom: 20px; }
 
 	.intro { margin-bottom: 20px; border-bottom: 1px #dcdcdc solid; }
-		.intro .icon { display: inline; float: left; height: 60px; width: 60px; border-radius: 100px;  -moz-border-radius: 100px; -webkit-border-radius: 100px; -o-border-radius: 100px; background:#F74902; margin: 0 20px 20px 0; }
+		.intro .icon { display: inline; float: left; height: 60px; width: 60px; border-radius: 100px;  -moz-border-radius: 100px; -webkit-border-radius: 100px; -o-border-radius: 100px; background:#800d1e; margin: 0 20px 20px 0; }
 		div.intro h1, div.intro h2, div.intro ol  { margin-left: 80px; }
 		div.intro ol, div.intro ul  { list-style-position: inside; }
 
@@ -105,24 +104,23 @@ body { background: #fff;  color: #000; }
 		#side .toc-title { font-family:'AvenirNextLTW01-MediumC 721311', Helvetica, Arial, sans-serif; line-height: 1em; color: #005A8C; padding: 15px 0 6px 0; z-index: 0; }
 			#toc { list-style: none; margin: 0; padding: 0; }
 				#toc li { text-shadow: 0 1px 0 rgba(255, 255, 255, .7); width: 100%; }
-					#toc li a { color: #3D3D3D; display: block; text-decoration: none; }
-						#toc li a:hover { cursor: pointer;  background: hsla(0, 0%, 40%, 1);  color: #fff; text-shadow: 0 -1px 1px rgba(0, 0, 0, .5); }
-					#toc li ul { display: none; }
-				#toc .h1 { background: #eee; color: #333; font-size: 18px; list-style-type: none; width: 320px; }
-					#toc .h1 a { padding: 2px 0 2px 20px; }
-				#toc .h2 { list-style: none; font-size: 16px; width: 320px; }
-					#toc .h2 a { padding: 0 0 0 30px; }
-				#toc .h3 { margin-left: 10px; display: none; }
-				#toc .h4 { margin-left: 25px; display: none; }
-				#toc .h5 { margin-left: 35px; display: none; }
+					#toc li a { display: block; color: #551a8b; cursor: pointer; }
+						#toc li a:hover { color: #1a1712; }
+					#toc li ul { display: none; padding: 0 0 0 10px; }
+						#toc li ul li { }
 	
 	.anchor_link { color: rgba(137, 137, 137, 0.4); font-size: 20px; font-weight: normal; position: relative; text-decoration: none; top: 0; left: 5px; z-index: 100; }
 	.backAnchor, .backAnchor a { display: inline-block; color: #999; font-size: 12px; margin: 0; padding: 3px 4px; position: absolute; text-decoration: none; right: 5px; top: -25px; }
 	.no-anchor .backAnchor { display: none; }
 
 	/* Footer ============================================================================ */
-	footer { background: #3d3d3d; color: #fff; font-size: 11px; margin: 0; overflow: hidden; line-height: 35px; width: 100%; }
-		footer p { width: 960px; margin: 0 auto; padding: 5px 0; }
+	footer { background: #3d3d3d; color: #fff; font-size: 11px; padding: 5px 0; margin: 0; overflow: hidden; line-height: 35px; width: 100%; }
+		#ftr { position: relative; margin: 0 auto; overflow: hidden; }
+		footer p { width: 60%; color: #CCCCCC; margin: 0 auto; padding: 5px 0; }
+		footer .social { width: 32%; float: right; clear: right; margin: 0; padding: 7px 7px 7px 0; z-index: 1; }
+			footer .social li { display: inline-block; vertical-align: top; margin-left: 10px; }
+				footer .social li a { display: inline; width: 20px; height: 20px; font-size: 1.25em; color: #ccc; }
+					footer .social li a:hover { color: #551a8b; }
 
 	/* Code Display ====================================================================== */
 	textarea[class~="brush:js"], textarea[class~="brush:css"], textarea[class~="brush:php"], textarea[class~="brush:html"], textarea[class~="brush:csharp"] { display: none; }
@@ -316,15 +314,15 @@ textarea[contenteditable] { -webkit-appearance: none; }
 }
 @media only screen and (min-width: 768px) {
   /* 768 =================================================== */
-  #main, #hdr { width: 740px; margin: 0 auto; }
-  	#content { width: 63%; float: left; clear: left; }
-  #side { width: 30%; max-width: 300px; float: left; clear: right; padding: 15px 0 6px 20px; }
+  #main, #hdr, #ftr { width: 740px; margin: 0 auto; }
+  	#content, footer p { width: 63%; float: left; clear: left; }
+  #side, .social { width: 30%; max-width: 300px; float: left; clear: right; padding: 15px 0 6px 20px; }
 		#side .toc-title { position: fixed; top:30px; border-bottom: 1px solid #005A8C; border-top: 10px solid #005A8C; z-index: 0; }
 			#toc { position: fixed; top: 125px; max-width: 300px; }
 }
 @media only screen and (min-width: 960px) {
   /* 960 =================================================== */
-  #main, #hdr { width: 960px; margin: 0 auto; }
+  #main, #hdr, #ftr { width: 960px; margin: 0 auto; }
 }
 @media only screen and (min-width: 1382px) {
   /* 1382 =================================================== */
@@ -355,10 +353,10 @@ textarea[contenteditable] { -webkit-appearance: none; }
   header { width: 100%; }
 		header #logo{ background: url('../img/common/CapellaUniversity.png') no-repeat 0 0 }
   h1, h2, h3, h4, h5, h6 { }
-  	h1, h2, h3 { color:#F74902; position: relative; margin-top: 20px; font-weight:200 }
+  	h1, h2, h3 { color:#800d1e; position: relative; margin-top: 20px; font-weight:200 }
   	h1 { padding:0; margin:0; color:#00050a; }
 	header h1 a { font-size:48px }
-	a,a:visited { text-decoration:none; color:#F74902 }
+	a,a:visited { text-decoration:none; color:#800d1e }
 	body .fork,#side,header #social,canvas,.anchor_link,.backAnchor { visibility:hidden }
 	.syntaxhighlighter { background:#ccc }
 }
