--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ img { border: 0; }
 svg:not(:root) { overflow: hidden; }
 /* Figures ======================================================================================== */
 figure { background: #fff; border: 3px solid; border-color: #ddd #999 #666; display: block; margin: -15px -2px 10px; padding: 1px; text-align: center; box-shadow: #ccc 0 1px 3px; -moz-box-shadow: #ccc 0 1px 3px; -webkit-box-shadow: #ccc 0 1px 3px; -o-box-shadow: #ccc 0 1px 3px; }
-	figure.extra { margin-top: 10px; }
+	figure.extra { width: 90%; margin: 10px 0 0; }
 	figure.preCode { border: none; display: block; margin: 8px 0 0 0; /* text-align: inherit; */ box-shadow: none; -moz-box-shadow: none; -webkit-box-shadow: none; -o-box-shadow: none; }
 figcaption { font-size: .9rem;  font-style: italic; text-align: left; }
 /* Forms ========================================================================================== */
@@ -101,16 +101,17 @@ p, dl, hr, h1, h2, h3, h4, h5, h6, ol, ul, pre, table, address, fieldset { margi
 			#content > section { padding-bottom: 20px; margin-bottom: 20px; border-bottom: 1px solid #dcdcdc; }
 				#content > section:last-child, #content > aside:last-child { border-bottom: none; }
 				#content > section article { border-bottom: 1px #dcdcdc solid; margin-bottom: 20px; }
+			#sections { padding-bottom: 30px; }
 
-			#mobileNav { margin: 0; padding: 1px 0 0; background: #1A1712; border-bottom: solid 1px #000; }
+			#mobileNav { width: 100%; position: fixed; top: 0; margin: 0; padding: 1px 0 0; background: #1A1712; border-bottom: solid 1px #000; z-index: 9; }
 				#menuTrigger { display: inline-block; font-size: 2.5rem; color: #FFF; line-height: 1.25rem; margin: 0; }
 				#mobileNav h1 { display: inline-block; font-size: .9rem; color: #FFF; line-height: 1.15rem; padding: 0; margin: 0 0 0 1rem; }
 /* 				#mobileNav h1 { display: inline-block; color: #FFF; line-height: 2.75rem; padding: 0; margin: 0; } */
 				#mobileNav span { display: block; }
 
-	.intro { margin-bottom: 20px; border-bottom: 1px #dcdcdc solid; }
+	.intro { padding: 20px 0; margin: 20px 0; border-top: 1px #dcdcdc solid; border-bottom: 1px #dcdcdc solid; }
 		.intro .icon { display: inline; float: left; height: 4rem; width: 4rem; border-radius: 100px; -moz-border-radius: 100px; -webkit-border-radius: 100px; -o-border-radius: 100px; background:#800d1e; margin: 0 20px 20px 0; }
-		div.intro h1, div.intro h2, div.intro ol  { margin-left: 80px; }
+		div.intro h1, div.intro h2, div.intro ol  { margin:0 0 20px 80px; }
 		div.intro ol, div.intro ul  { list-style-position: inside; }
 
 	/* Table of Contents ================================================================= */
@@ -125,14 +126,14 @@ p, dl, hr, h1, h2, h3, h4, h5, h6, ol, ul, pre, table, address, fieldset { margi
 			#toc li a:link, #toc li a:visited { color: #CCC; }	
 			#toc li a:hover, #toc li a:focus { color: #06e; }	
 				#toc li ul { display: none; padding: 0 0 0 10px; }
-					#toc li ul li { }
+					#toc li ul li:last-child { border-bottom: none; }
 	
 	.anchor_link { color: rgba(137, 137, 137, 0.4); /* font-size: 20px; */ font-weight: normal; position: relative; text-decoration: none; top: 0; left: 5px; z-index: 100; }
 	.backAnchor, .backAnchor a { display: inline-block; color: #999; /* font-size: 12px; */ margin: 0; padding: 3px 4px; position: absolute; text-decoration: none; right: 5px; top: -25px; }
 	.no-anchor .backAnchor { display: none; }
 
 	/* Footer ============================================================================ */
-	footer { width: 100%; position: fixed; bottom: 0; background: #3d3d3d; color: #FFF; font-size: 1.1rem; padding: 5px 0; margin: 0; overflow: hidden; line-height: 35px;  z-index: 10; }
+	footer { width: 100%; position: relative; bottom: 0; background: #3d3d3d; color: #FFF; font-size: 1.1rem; padding: 5px 0; margin: 0; overflow: hidden; line-height: 35px;  z-index: 10; }
 		#ftr { position: relative; margin: 0 auto; overflow: hidden; }
 		footer p { width: 60%; color: #CCCCCC; margin: 0 auto; padding: 5px 0; }
 		footer .social { width: 32%; float: right; clear: right; text-align: right; margin: 0; padding: 7px 7px 7px 0; z-index: 1; }
@@ -340,7 +341,7 @@ p, dl, hr, h1, h2, h3, h4, h5, h6, ol, ul, pre, table, address, fieldset { margi
 
 	#side { display: block; float: right; clear: right; position: relative !important; top: -35px; width: 27%;  padding: 15px 0 6px 20px; background: none; z-index: 4; }
 		#side .toc-title { display: block; /* position: fixed;  top:23px; */ line-height: 2rem; color: #005A8C; padding: 15px 0 6px 0; margin: 0; border-top: 10px solid #005A8C; z-index: 0; }
-			#toc { /* position: fixed;  top: 125px;  max-width: 300px; */ list-style: none; margin: 0; padding: 0; }
+			#toc { position: fixed; width: inherit; max-width: 300px; list-style: none; margin: 0; padding: 0; }
 				#toc li { width: 100%; }
 					#toc li a:link, #toc li a:visited { color: #551a8b; }
 						#toc li a:hover, #toc li a:focus { color: #1a1712; }
@@ -382,9 +383,9 @@ textarea[contenteditable] { -webkit-appearance: none; }
 .visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
 .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
 .invisible { visibility: hidden; }
-section, .clearfix:before, .clearfix:after { content: ""; display: table; }
-section, .clearfix:after { clear: both; }
-section, .clearfix { *zoom: 1; }
+.clearfix:before, .clearfix:after { content: ""; display: table; }
+.clearfix:after { clear: both; }
+.clearfix { *zoom: 1; }
 
 /* Media Print ==================================================================================== */
 @media print {
