--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ p, dl, hr, h1, h2, h3, h4, h5, h6, ol, ul, pre, table, address, fieldset { margi
 	.no-anchor .backAnchor { display: none; }
 
 	/* Footer ============================================================================ */
-	footer { width: 100%; position: relative; bottom: 0; background: #3d3d3d; color: #FFF; font-size: 1.1rem; padding: 5px 0; margin: 0; overflow: hidden; line-height: 35px;  z-index: 10; }
+	footer { display: none; width: 100%; position: relative; bottom: 0; background: #3d3d3d; color: #FFF; font-size: 1.1rem; padding: 5px 0; margin: 0; overflow: hidden; line-height: 35px;  z-index: 10; }
 		#ftr { position: relative; margin: 0 auto; overflow: hidden; }
 		footer p { width: 60%; color: #CCCCCC; margin: 0 auto; padding: 5px 0; }
 		footer .social { width: 32%; float: right; clear: right; text-align: right; margin: 0; padding: 7px 7px 7px 0; z-index: 1; }
